# NOAA-NMFS-Brand-Resources

./: .bumpversion.cfg  README.html  README.md  _brand.yml  _quarto.yml  _quarto_internal_scss_error.scss  index.qmd  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  deploy_app.yml  deploy_app_github_runner.yml  deploy_app_github_runner_v2.yml  deploy_app_github_runner_v3.yml  deploy_app_github_runner_v4.yml  deploy_app_github_runnerv3.yml  deploy_app_self_hosted_runner.yml  deploy_app_self_hosted_runner_v2.yml  deploy_app_v2.yml  publish.yml
README_files/libs/bootstrap/: bootstrap-1a508938583f51dd05ee746671f0e51f.min.css
app/NMFS Color Palettes Explorer/: app.py  manifest.json  requirements.txt
app/NMFS_Color_Palettes_Explorer/: manifest.json
nmfs-brand/_extensions/nmfs-brand/: _brand.yml  _extension.yml
nmfs-slides/: template.qmd
nmfs-slides/_extensions/nmfs-slides/: _extension.yml
notebooks/: nmfspalettepy_example_notebook.ipynb
quarto/nmfs-brand/: README.md
quarto/nmfs-brand/_extensions/nmfs-brand/: _brand.yml  _extension.yml  dark_brand.yml  (+2 more)
quarto/nmfs-slides/: README.md  _brand.yml  blue-horiz-swoop.qmd  blue-vert-swoop.qmd  light-theme.scss  navy-horiz-swoop.qmd  navy-vert-swoop.qmd  slides_light_brand.yml  teal-horiz-swoop.qmd  teal-vert-swoop.qmd  template.html  template.qmd
r-shiny/: info.md
script/: nmfs-color-palette-script.ipynb  nmfspalettepy_example_notebook.ipynb
script/.ipynb_checkpoints/: nmfs-color-palette-script-checkpoint.ipynb  nmfs-icon-maker-script-checkpoint.ipynb
(+8 files in other folders)
